# vmxkernel-os

./: .gitignore  Cargo.toml  Makefile  README.md
apps/: Makefile  test.c
apps/init/: Cargo.toml
apps/init/src/: main.rs
apps/shell/: Cargo.toml
apps/shell/src/: main.rs  run.rs
apps/shell/src/commands/: cat.rs  cd.rs  ls.rs  mod.rs  mount.rs  testfb.rs  testkvm.rs  touch.rs  write.rs
apps/ui/: Cargo.toml
apps/ui/src/: main.rs
builder/: Cargo.toml  limine.cfg
builder/assets/: limine.conf
builder/src/: lib.rs  main.rs
kernel/: Cargo.toml
kernel/crates/efs/: ARCHITECTURE.md  Cargo.toml  README.md  deny.toml  flake.nix  rust-toolchain.toml
kernel/crates/efs/.forgejo/workflows/: build.yml
kernel/crates/efs/src/: arch.rs  cache.rs  celled.rs  error.rs  file.rs  io.rs  lib.rs  path.rs  permissions.rs  tests.rs  types.rs
kernel/crates/efs/src/dev/: error.rs  mod.rs  sector.rs  size.rs
kernel/crates/efs/src/fs/: error.rs  mod.rs
kernel/crates/efs/src/fs/ext2/: block.rs  block_group.rs  directory.rs  error.rs  file.rs  inode.rs  mod.rs  superblock.rs
kernel/crates/efs/src/fs/structures/: bitmap.rs  indirection.rs  mod.rs
kernel/crates/efs/tests/fs/ext2/: base.ext2  extended.ext2  io_operations.ext2
kernel/crates/good-fatfs/: Cargo.toml
kernel/crates/good-fatfs/src/: boot_sector.rs  dir.rs  dir_entry.rs  file.rs  fs.rs  io.rs  lib.rs  log_macros.rs  table.rs
kernel/crates/rvm/: Cargo.toml
kernel/crates/rvm/src/: lib.rs
kernel/crates/rvm/src/arch/x86_64/: mod.rs
kernel/crates/rvm/src/arch/x86_64/vmx/: mod.rs  vcpu.rs
kernel/crates/syscall_index/: Cargo.toml
kernel/crates/syscall_index/src/: lib.rs
kernel/src/: lib.rs  main.rs
kernel/src/arch/: acpi.rs  gdt.rs  interrupts.rs  mod.rs
kernel/src/device/: ahci.rs  block.rs  display.rs  e1000.rs  fpu.rs  keyboard.rs  mod.rs  mouse.rs  nvme.rs  pci.rs  terminal.rs  xhci.rs
kernel/src/fs/: ext2.rs  ext4.rs  fat32.rs  mod.rs  operation.rs
kernel/src/fs/vfs/: inode.rs  mod.rs  root.rs
kernel/src/fs/vfs/dev/: block.rs  fb.rs  kvm.rs  mod.rs  terminal.rs
kernel/src/fs/vfs/mnt/: mod.rs
kernel/src/memory/: frame.rs  kernel_heap.rs  manager.rs  mod.rs  page_table.rs
kernel/src/syscall/: matcher.rs  mod.rs  operations.rs
kernel/src/task/: mod.rs  process.rs  scheduler.rs  thread.rs
kernel/src/virt/kvm/: gconfig.rs  gpm.rs  lapic.rs  mod.rs
kernel/src/virt/kvm/device_emu/: mod.rs  uart16550.rs
relibc/: Cargo.toml  Makefile  build.rs
relibc/ld_so/ld_script/: x86_64-unknown-linux-gnu.ld
relibc/posix-regex/src/: compile.rs  lib.rs  matcher.rs
relibc/src/: lib.rs  start.rs
relibc/src/crt0/src/: lib.rs
relibc/src/ld_so/: mod.rs  tcb.rs
relibc/src/platform/linux/: epoll.rs  mod.rs  ptrace.rs  signal.rs  socket.rs
vsc/: Cargo.toml  Makefile
vsc/src/: c_str.rs  fs.rs  lib.rs  mm.rs
vstd/: Cargo.toml
vstd/src/: debug.rs  fs.rs  lib.rs  mm.rs  task.rs
