[workspace]
members = ["apps/init", "apps/shell", "apps/ui", "builder", "kernel", "vstd", "kernel/crates/syscall_index", "kernel/crates/good-fatfs", "kernel/crates/efs", "kernel/crates/rvm"]
exclude = ["vsc", "relibc"]
resolver = "2"
default-members = ["builder"]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
codegen-units = 1
