cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-none"

[dependencies]
x86_64 = "0.15.1"
spin = "0.9.8"
uart_16550 = "0.3.1"
pc-keyboard = "0.7.0"
acpi = "5.0.0"
x2apic = "0.4.3"
bitflags = "2.6.0"
good_memory_allocator = "0.1.7"
gpt_disk_io = "0.16.0"
bit_field = "0.10.2"
colorz = "1.1.2"
pci_types = "0.10.0"
nvme = "0.1.2"
xhci = "0.9.2"
x86 = "0.52.0"
raw-cpuid = "11.1.0"
vcell = "0.1.3"
talc = "4.4.1"
ext4_rs = "1.1.0"

[dependencies.limine]
version = "0.2.0"
features = ["uuid"]

[dependencies.uuid]
version = "1.0"
default-features = false

[dependencies.fatfs]
path = "crates/good-fatfs"
features = ["lfn","alloc","unicode"]
default-features = false

[dependencies.time]
version = "0.3.36"
default-features = false

[dependencies.crossbeam-queue]
version = "0.3.11"
features = ["alloc"]
default-features = false

[dependencies.object]
version = "0.36.3"
features = ["read_core", "elf", "unaligned"]
default-features = false

[dependencies.os-terminal]
version = "0.3.6"
features = ["bitmap", "truetype"]

[dependencies.log]
version = "0.4.22"
default-features = false

[dependencies.syscall_index]
path = "crates/syscall_index"

[dependencies.rvm]
path = "crates/rvm"
